--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "aistack",
+  "name": "devstackai",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "bin": {
-    "aistack": "dist/index.js"
+    "devstackai": "dist/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
